# Digital-audio-filtering

./: .gitignore  README.md
rework/implementation/: CMakeLists.txt  conv.h  fir.c  fir.h  iir.c  iir.h  low_pass_coefficients.h  main.c  wav.c  wav.h
